@@ -1,3 +1,7 @@
+2005-11-11  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/news/status.xml: dump
+
 2005-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* bin/bugzilla:
